Grafana/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: lgtm-stack
spec:
  selector:
    app: grafana
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
