Grafana/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress-route
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.app.horna.local`)
      kind: Rule
      services:
        - name: grafana-service
          port: 3000
